--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,22 @@
+*{  
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  
+  }
+
 .input100 {
     outline: 0;
     border-width: 0 0 2px;
 
   }
-  
+  .footer{
+    box-shadow: -12px -23px 29px -33px rgba(0,0,0,0.75);
+  }
+  .navMio{
+    box-shadow: -12px 26px 29px -33px rgba(0,0,0,0.75);
+  }
+
+ 
+/* finfondo nav*/
+
